# TMA4280LABS

./: .gitignore  README.md
mach0/: mach.h  main.c  makefile  num_pi.c  utest.c  vtest.c
mach1/: mach.c  mach.h  q4.c  q5.c
mach2/: mach.c  mach.h  makefile  num_pi.c
project_1/mach0/: mach.c  num_pi.c  utest.c
project_1/mach1/: mach.h  makefile  q4.c  q5.c
project_1/mach2/: mach.c
project_1/reduc/: zeta.c
project_1/zeta0/: utest.c  vtest.c  zeta.c
project_1/zeta1/: makefile
project_1/zeta2/: num_pi.c  zeta.c  zeta.h
project_2/: CMakeLists.txt  job_hybrid.sh  job_pure.sh  main.c  main.cpp  main_openmp.cpp  mk2DArray.cpp  mk2DArray.h  poisson.c  poisson_pure.cpp  test.c  test.cpp
reduc/: double_rec.c  makefile  num_pi.c  zeta.h
zeta0/: main.c  makefile  num_pi.c  utest.c  vtest.c  zeta.h
zeta1/: num_pi.h  q4.c  q5.c  zeta.c  zeta.h
zeta2/: makefile  num_pi.c  zeta.c
